# neuroimaging_snakemake_tutorial

./: .gitignore  README.md  acquire.md  conf.py  prep.md  pyproject.toml  setup.md
.github/workflows/: build.yml
_static/: theme_hide.css
src/: acquire.md  conf.py  coreg.md  figure.md  index.md  mc.md  prep.md  setup.md  summary.md  tmean.md  wrapup.md
src/_static/: code_boxes.css
src/_templates/: page.html
workflow/: pyproject.toml
workflow/containers/: py312-matplotlib-nibabel.def  py312-matplotlib-skimage-nibabel.def
workflow/profiles/default/: config.yaml
workflow/workflow/: Snakefile  Snakefile_acquire  Snakefile_coreg  Snakefile_mc  Snakefile_mc_start  Snakefile_tmean  Snakefile_tmean_start
workflow/workflow/rules/: acquire_anat.smk  acquire_func.smk  common.smk  coreg.smk  figure.smk  mot_correct.smk  tmean.smk
workflow/workflow/scripts/: figure.py  mot_correct.py
