[project]
name = "tutorial"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "furo>=2025.12.19",
    "myst-parser>=5.0.0",
    "pygments-snakemake",
    "sphinx>=9.0.4",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-code-include>=2.0.0",
    "sphinx-copybutton>=0.5.2",
]

[tool.uv.sources]
pygments-snakemake = { path = "../pygments-snakemake", editable = true }
