[project]
name = "neuroimaging_snakemake_tutorial"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "furo>=2025.12.19",
    "myst-parser>=5.0.0",
    "pygments-snakemake",
    "sphinx>=9.0.4",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-code-include>=2.0.0",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-mermaid>=2.0.1",
    "sphinxext-opengraph[social-cards]>=0.13.0",
]

[tool.uv.sources]
pygments-snakemake = { git = "https://github.com/djmannion/pygments-snakemake" }
